--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
 branca==0.8.1
 certifi==2025.4.26
 charset-normalizer==3.4.2
+contourpy==1.3.0
+cycler==0.12.1
 folium==0.19.6
+fonttools==4.58.0
 h3==4.2.2
 idna==3.10
+importlib-resources==6.5.2
 jinja2==3.1.6
+kiwisolver==1.4.7
 markupsafe==3.0.2
+matplotlib==3.9.4
 numpy==2.0.2
+packaging==25.0
 pandas==2.2.3
+pillow==11.2.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.3
@@ -15,3 +24,4 @@ six==1.17.0
 tzdata==2025.2
 urllib3==2.4.0
 xyzservices==2025.4.0
+zipp==3.21.0
